--- a/APPVIEW/Views/QLBills/ShowDonCho.cshtml
+++ b/APPVIEW/Views/QLBills/ShowDonCho.cshtml
@@ -100,7 +100,10 @@
                                             <i class="mdi mdi-dots-vertical mdi-20px"></i>
                                         </button>
                                         <div class="dropdown-menu dropdown-menu-end m-0">
-                                            <a href=" @Url.Action("Chitiet", new { id = itembill.id })" class="dropdown-item ">
+                                            <a href=" @Url.Action("Delete", new { id = itembill.id })" class="dropdown-item ">
+                                                <i class="mdi mdi-receipt-text-remove"></i>
+                                                <span>Xóa đơn hàng</span>
+                                            </a> <a href=" @Url.Action("Chitiet", new { id = itembill.id })" class="dropdown-item ">
                                                 <i class="mdi mdi-eye-outline me-2"></i>
                                                 <span>Xem đơn hàng</span>
                                             </a>
