--- a/APPVIEW/Views/Home/Checkout.cshtml
+++ b/APPVIEW/Views/Home/Checkout.cshtml
@@ -245,6 +245,10 @@
                         <div class="col-md-6 form-group p_star">
                             <input type="text" class="form-control" placeholder="Địa chỉ cụ thể" asp-for="@Model.SpecificAddress" id="text">
                             <span class="placeholder"></span>
+                        </div>                        
+                        <div class="col-md-6 form-group p_star">
+                            <input type="text" class="form-control" placeholder="Địa chỉ email" name="email" id="text">
+                            <span class="placeholder"></span>
                         </div>
                         <div class="col-md-12 form-group">
                             <input type="text" class="form-control" id="company" name="company" placeholder="Mô tả" asp-for="Description">
