--- a/APPVIEW/Views/Home/ThongTinNotLogin.cshtml
+++ b/APPVIEW/Views/Home/ThongTinNotLogin.cshtml
@@ -92,7 +92,7 @@ h3{
             <div class="form-group" id="form">
                 <label for="sdt"></label>
                 <div class="input-group">
-                    <input type="text" class="form-control" name="sdt" id="sdt" placeholder="Nhập số điện thoại">
+                    <input type="text" class="form-control" name="sdt"  placeholder="Nhập mã hóa đơn">
                      <span class="text-danger error-message" id="phoneError"></span> <br />
                 </div>
             </div>
